Refactor Appium driver management to use DriverManager and update driver initialization in BaseTestsConfig